# qtisas

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.rst  build.md  changelog.md  qtisas18.pro  readme.md
qtisas/python/: pyproject.toml  python-qtiUtil.py  qti.sip  qti_wordlist.txt  qtimod.sip4  qtiplot_remote_ctl.py  qtisasrc.py
qtisas/python/sip/qti/: qtimod.sip
qtisas/sans/ascii1d/: CMakeLists.txt  ascii1d.pri  ascii1d.ui  ascii1d18.cpp  ascii1d18.h
qtisas/sans/common/: CMakeLists.txt  combobox-in-table.cpp  combobox-in-table.h  common.pri  constants.h  fit-function-explorer.cpp  fit-function-explorer.h  highlighter.h  msleep.h  naturalsort.h  qnaturalsortlist.h  repository-synchronization.cpp  repository-synchronization.h
qtisas/sans/compile/: CMakeLists.txt  compile-code-menu.cpp  compile-explorer.cpp  compile-info.cpp  compile-init.cpp  compile-parameters.cpp  compile-sasview.cpp  compile-settings.cpp  compile.pri  compile.ui  compile18.cpp  compile18.h  highlighter.cpp  highlighter.h
qtisas/sans/dan/: CMakeLists.txt  dan-init-interface.cpp  dan.pri  dan.ui  dan18-init.cpp  dan18-mask.cpp  dan18-merge1d.cpp  dan18-options-header.cpp  dan18-options.cpp  dan18-process-dandan.cpp  dan18-process-matrix.cpp  dan18-process-polarization.cpp  dan18-process-single-line-in-script.cpp  dan18-process.cpp  dan18-rawdata-addfiles.cpp  dan18-rawdata-extractor.cpp  dan18-rawdata-realtime.cpp  dan18-rawdata-tof.cpp  dan18-rawdata-tools.cpp  dan18-sens.cpp  dan18-settings.cpp  dan18.cpp  dan18.h  deadTimeRoot.cpp  deadTimeRoot.h
qtisas/sans/dan/dan-configuration-widgets/: CMakeLists.txt  dan-conf-selector-const-table-header.cpp  dan-conf-selector-const-table-header.h
qtisas/sans/dan/dan-files-manager/: dan-files-manager.cpp  dan-files-manager.h
qtisas/sans/dan/dan-header-devices/: CMakeLists.txt  collimation.cpp  collimation.h  dan-header-devices.h  detector.h  monitors.cpp  monitors.h  sample.cpp  sample.h  selector.cpp  (+2 more)
qtisas/sans/fittable/: CMakeLists.txt  fittable-batch.cpp  fittable-data.cpp  fittable-explorer.cpp  fittable-fitting-fitting.cpp  fittable-fitting.cpp  fittable-init.cpp  fittable-simulate-simulate.cpp  fittable-simulate.cpp  fittable.pri  fittable.ui  fittable18.cpp  fittable18.h  fitting.cpp  fitting.h  glaguerre.cpp  glegendre.cpp
qtisas/sans/jnse/: CMakeLists.txt  jnse.pri  jnse.ui  jnse18.cpp  jnse18.h
qtisas/sans/svd/: CMakeLists.txt  svd.cpp  svd.h  svd.pri  svd.ui
qtisas/src/analysis/: Anova.cpp  Anova.h  CMakeLists.txt  ChiSquareTest.cpp  ChiSquareTest.h  Convolution.cpp  Convolution.h  Correlation.cpp  Correlation.h  Differentiation.cpp  Differentiation.h  ExponentialFit.cpp  ExponentialFit.h  FFT.cpp  FFT.h  FFTFilter.cpp  FFTFilter.h  Filter.cpp  Filter.h  Fit.cpp  Fit.h  FitModelHandler.cpp  FitModelHandler.h  Integration.cpp  Integration.h  Interpolation.cpp  Interpolation.h  LogisticFit.cpp  LogisticFit.h  MultiPeakFit.cpp  MultiPeakFit.h  NonLinearFit.cpp  NonLinearFit.h  PluginFit.cpp  PluginFit.h  PolynomialFit.cpp  PolynomialFit.h  ShapiroWilkTest.cpp  ShapiroWilkTest.h  SigmoidalFit.cpp  (+16 more)
qtisas/src/core/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  CreateBinMatrixDialog.cpp  CreateBinMatrixDialog.h  CustomActionDialog.cpp  CustomActionDialog.h  FindDialog.cpp  FindDialog.h  Folder.cpp  Folder.h  ImportASCIIDialog.cpp  ImportASCIIDialog.h  ImportExportPlugin.h  MdiSubWindow.cpp  MdiSubWindow.h  MultiPeakFitTool.cpp  MultiPeakFitTool.h  OpenProjectDialog.cpp  OpenProjectDialog.h  PlotWizard.cpp  PlotWizard.h  QtiPlotApplication.cpp  QtiPlotApplication.h  RenameWindowDialog.cpp  RenameWindowDialog.h  compat.cpp  compat.h  core.pri  globals.h  main.cpp  settings.h  version.h
qtisas/src/lib/: CMakeLists.txt  libqti.pri  qti.pro
qtisas/src/matrix/: CMakeLists.txt  ColorMapDialog.cpp  ColorMapDialog.h  Matrix.cpp  Matrix.h  MatrixCommand.cpp  MatrixCommand.h  MatrixDialog.cpp  MatrixDialog.h  MatrixModel.cpp  MatrixModel.h  MatrixResamplingDialog.cpp  MatrixResamplingDialog.h  MatrixSizeDialog.cpp  MatrixSizeDialog.h  MatrixValuesDialog.cpp  MatrixValuesDialog.h  matrix.pri
qtisas/src/plot2D/: AddWidgetTool.cpp  AddWidgetTool.h  ArrowMarker.cpp  ArrowMarker.h  BoxCurve.cpp  BoxCurve.h  CMakeLists.txt  CanvasPicker.cpp  CanvasPicker.h  DataPickerTool.cpp  DataPickerTool.h  EllipseWidget.cpp  EllipseWidget.h  ErrorBarsCurve.cpp  ErrorBarsCurve.h  FrameWidget.cpp  FrameWidget.h  FunctionCurve.cpp  FunctionCurve.h  Graph.cpp  Graph.h  Grid.cpp  Grid.h  ImageSymbol.cpp  ImageSymbol.h  ImageWidget.cpp  ImageWidget.h  LegendWidget.cpp  LegendWidget.h  LineProfileTool.cpp  LineProfileTool.h  LnScaleEngine.cpp  LnScaleEngine.h  Log2ScaleEngine.cpp  Log2ScaleEngine.h  LogitScaleEngine.cpp  LogitScaleEngine.h  MultiLayer.cpp  MultiLayer.h  MultiPeakFitTool.cpp  (+41 more)
qtisas/src/plot3D/: Bar.cpp  Bar.h  CMakeLists.txt  ColorMapPreviewDialog.cpp  ColorMapPreviewDialog.h  Cone3D.cpp  Cone3D.h  Graph3D.cpp  Graph3D.h  Plot3DDialog.cpp  Plot3DDialog.h  SurfaceDialog.cpp  SurfaceDialog.h  plot3D.pri
qtisas/src/scripting/: .ScriptingLangDialog.cpp.kate-swp  CMakeLists.txt  FindReplaceDialog.cpp  FindReplaceDialog.h  MyParser.cpp  MyParser.h  Note.cpp  Note.h  PythonScript.cpp  PythonScript.h  PythonScripting.cpp  PythonScripting.h  PythonSyntaxHighlighter.cpp  PythonSyntaxHighlighter.h  Script.cpp  Script.h  ScriptEdit.cpp  ScriptEdit.h  ScriptWindow.cpp  ScriptWindow.h  ScriptingEnv.cpp  ScriptingEnv.h  ScriptingLangDialog.cpp  ScriptingLangDialog.h  SmartCompleter.cpp  SmartCompleter.h  customevents.h  muParserScript.cpp  muParserScript.h  muParserScripting.cpp  muParserScripting.h  qti.sip  scripting.pri
qtisas/src/table/: CMakeLists.txt  ExportDialog.cpp  ExportDialog.h  ExtractDataDialog.cpp  ExtractDataDialog.h  Header.cpp  Header.h  Myselection.cpp  Myselection.h  Mytable.cpp  Mytable.h  SetColValuesDialog.cpp  SetColValuesDialog.h  SortDialog.cpp  SortDialog.h  Table.cpp  Table.h  TableDialog.cpp  TableDialog.h  TableStatistics.cpp  TableStatistics.h  table.pri
(+275 files in other folders)
